# humanoid_user_registration_pypi_ready_v1_0_0

./: README.md
humanoid_user_registration_pypi_ready/: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SHA256SUMS.txt  pyproject.toml
humanoid_user_registration_pypi_ready/.github/workflows/: ci.yml  publish.yml
humanoid_user_registration_pypi_ready/src/humanoid_user_registration/: __init__.py  fields.py  serializers.py  types.py  urls.py  views.py
humanoid_user_registration_pypi_ready/tests/: settings.py  test_fields.py  test_registration.py  urls.py
