[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanoid-user-registration"
version = "1.0.0"
description = "A tiny flexible DRF toolkit for user registration from views.py in a few lines."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Hekmat", email = "your-email@example.com" }
]
maintainers = [
  { name = "Hekmat", email = "your-email@example.com" }
]
keywords = [
  "django",
  "djangorestframework",
  "drf",
  "registration",
  "authentication",
  "user-registration"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "Django>=4.2",
  "djangorestframework>=3.14",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "twine>=5.0",
  "pytest>=8.0",
  "pytest-django>=4.8",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/your-username/humanoid-user-registration"
Documentation = "https://github.com/your-username/humanoid-user-registration#readme"
Issues = "https://github.com/your-username/humanoid-user-registration/issues"
Source = "https://github.com/your-username/humanoid-user-registration"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
